--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -1,7 +1,16 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,900italic,900,700italic,700);
-
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+}
+a {
+    color: #222;
+    text-decoration: none;
+}
+a:hover {
+    color: #ef283f;
+}
+.btn, .nav-tabs>li>a, .navbar-toggle {
+    border-radius: 0;
 }
 .navbar {
     padding-top: 10px;
@@ -15,23 +24,40 @@ body {
     color: #ddd;
     text-transform: uppercase;
 }
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
+    color: #fff;
+    background: #ef283f;
+}
 .navbar-right {
     margin-right: 5px;
 }
 .nav-sidebar > li > a {
     padding: 20px 30px;
 }
+.nav>li {
+    letter-spacing: 0.5px;
+}
 .sidebar {
     top: 50px;
+}
+.nav-tabs>li>a {
+    color: #555;
+}
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
+    color: #ef283f;
 }
 .main {
     padding: 40px 30px;
 }
+.admin .main .form-group {
+    margin: 0;
+}
+.admin .main .form-control {
+    border-radius: 0;
+}
 h1 {
     margin: 20px 0 40px;
 }
-
-
 .form-horizontal {
     margin-left: 3px;
 }
@@ -41,25 +67,20 @@ h1 {
 .form-group {
     margin-bottom: 30px;
 }
-
-.table {
-    /*width: 80%;*/
+.form-control {
+    border-radius: 0;
+    height: 37px;
 }
-
-
 .glyphicon {
     font-size: 20px;
     top: 5px;
-    margin-right: 20px;
+    margin: 0 10px;
 }
 .glyphicon-triangle-bottom {
-    top: 3px;
+    top: 1px;
     font-size: 12px;
     margin-right: 10px;
 }
-
-
-
 .form-fields {
     margin-top: 30px;
 }
@@ -77,7 +98,11 @@ h1 {
 .action-links .glyphicon {
     margin: 0 5px 0 10px;
 }
-
 .marginTop20 {
     margin-top: 20px;
+}
+select.form-control {
+    border: 0;
+    outline: 1px solid #CCC;
+    background-color: white;
 }
