--- a/public/assignment/views/sidebar/sidebar.view.html
+++ b/public/assignment/views/sidebar/sidebar.view.html
@@ -1,8 +1,12 @@
-<div class="col-sm-3 col-md-2 sidebar" ng-controller="SidebarController">
-    <ul class="nav nav-sidebar">
-        <li class="active"><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="profile.html">Profile</a></li>
-        <li><a href="admin.html">Admin</a></li>
-        <li><a href="forms.html">Forms</a></li>
-    </ul>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-3 col-md-2 sidebar" ng-controller="SidebarController">
+            <ul class="nav nav-sidebar">
+                <li class="active"><a href="#/home">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="#/profile">Profile</a></li>
+                <li><a href="#/admin">Admin</a></li>
+                <li><a href="#/forms">Forms</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
