--- a/public/assignment/views/users/login.view.html
+++ b/public/assignment/views/users/login.view.html
@@ -1,25 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="">
-
-    <title>Form Maker</title>
-
-
-    <!-- stylesheets -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link href="css/dashboard.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-
-
-</head>
-<body>
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
@@ -28,39 +6,21 @@
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Username:</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="" placeholder="Username">
+                        <input ng-model="user.username" type="text" class="form-control" id="" placeholder="Username">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Password:</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="" placeholder="Password">
+                        <input ng-model="user.password" type="password" class="form-control" id="" placeholder="Password">
                     </div>
                 </div>
-                <!--<div class="form-group">-->
-                <!--<div class="col-sm-offset-2 col-sm-10">-->
-                <!--<div class="checkbox">-->
-                <!--<label>-->
-                <!--<input type="checkbox"> Remember me-->
-                <!--</label>-->
-                <!--</div>-->
-                <!--</div>-->
-                <!--</div>-->
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default btn-lg">Login</button>
+                        <button ng-click="login(user)" type="submit" class="btn btn-default btn-lg">Login</button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
 </div>
-
-
-<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-        integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-        crossorigin="anonymous"></script>
-
-</body>
-</html>
