--- a/public/assignment/views/forms/fields.view.html
+++ b/public/assignment/views/forms/fields.view.html
@@ -3,8 +3,8 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1>Forms</h1>
             <ul class="nav nav-tabs">
-                <li role="presentation"><a href="forms.html">Forms</a></li>
-                <li role="presentation" class="active"><a href="form-fields.html">Fields</a></li>
+                <li role="presentation"><a href="#forms">Forms</a></li>
+                <li role="presentation" class="active"><a href="#fields">Fields</a></li>
             </ul>
             <form class="form-fields">
                 <div class="fields-group">
