--- a/public/assignment/views/forms/fields.view.html
+++ b/public/assignment/views/forms/fields.view.html
@@ -10,7 +10,7 @@
                 <div class="fields-group">
                     <div class="form-group">
                         <label for="">First Name</label>
-                        <input type="text" class="form-control" id="" placeholder="First Name">
+                        <input ng-model="forms.firstName" type="text" class="form-control" id="" placeholder="First Name">
                     </div>
                     <div class="action-links">
                         <a href="#"><span class="glyphicon glyphicon-pencil"></span></a>
@@ -22,7 +22,7 @@
                 <div class="fields-group">
                     <div class="form-group">
                         <label for="">Last Name</label>
-                        <input type="text" class="form-control" id="" placeholder="Last Name">
+                        <input ng-model="forms.lastName" type="text" class="form-control" id="" placeholder="Last Name">
                     </div>
                     <div class="action-links">
                         <a href="#"><span class="glyphicon glyphicon-pencil"></span></a>
@@ -34,7 +34,7 @@
                 <div class="fields-group">
                     <div class="form-group">
                         <label for="">Date of Birth</label>
-                        <input type="date" class="form-control" id="" placeholder="Select Date">
+                        <input ng-model="forms.dob" type="date" class="form-control" id="" placeholder="Select Date">
                     </div>
                     <div class="action-links">
                         <a href="#"><span class="glyphicon glyphicon-pencil"></span></a>
