--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div ng-controller="FormController" class="container-fluid">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1>Forms</h1>
@@ -15,31 +15,17 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td><input type="text" class="form-control" placeholder="Name"></td>
+                    <td><input ng-model="forms.title" type="text" class="form-control" placeholder="Name"></td>
                     <td>
-                        <a href="#"><span class="glyphicon glyphicon-plus"></span></a>
-                        <a href="#"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
+                        <a ng-click="addForm(form)"><span class="glyphicon glyphicon-plus"></span></a>
+                        <a ng-click="updateForm()"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
                     </td>
                 </tr>
-                <tr>
-                    <td>Registration Form</td>
+                <tr ng-repeat="form in forms">
+                    <td><a href="#/fields">{{form.title}}</a></td>
                     <td>
-                        <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
-                        <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Contact List</td>
-                    <td>
-                        <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
-                        <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>To Do List</td>
-                    <td>
-                        <a href="#"><span class="glyphicon glyphicon-remove"></span></a>
-                        <a href="#"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                        <a ng-click="deleteForm($index)"><span class="glyphicon glyphicon-remove"></span></a>
+                        <a ng-click="selectForm($index)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
                     </td>
                 </tr>
                 </tbody>
