--- a/public/assignment/views/header/header.view.html
+++ b/public/assignment/views/header/header.view.html
@@ -1,8 +1,7 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav ng-controller="HeaderController" class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -12,10 +11,18 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#/register">Register</a></li>
-                <li><a href="#/login">Login</a></li>
-                <li><a href="#/profile">Username</a></li>
-                <li><a href="#">Logout</a></li>
+                <li ng-hide="currentUser" ng-class="{'active': $location.url().indexOf('register') != -1}">
+                    <a href="#/register">Register</a>
+                </li>
+                <li ng-hide="currentUser" ng-class="{'active': $location.url().indexOf('login') != -1}">
+                    <a href="#/login">Login</a>
+                </li>
+                <li ng-show="currentUser" ng-class="{'active': $location.url().indexOf('username') != -1}">
+                    <a href="#/profile">{{currentUser.username}}</a>
+                </li>
+                <li ng-show="currentUser">
+                    <a ng-click="logout()">Logout</a>
+                </li>
             </ul>
         </div>
     </div>
