--- a/public/assignment/views/sidebar/sidebar.view.html
+++ b/public/assignment/views/sidebar/sidebar.view.html
@@ -1,8 +1,16 @@
-<div class="col-sm-3 col-md-2 sidebar" ng-controller="SidebarController">
+<div ng-controller="SidebarController" class="col-sm-3 col-md-2 sidebar">
     <ul class="nav nav-sidebar">
-        <li class="active"><a href="#/home">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="#/profile">Profile</a></li>
-        <li><a href="#/admin">Admin</a></li>
-        <li><a href="#/forms">Forms</a></li>
+        <li ng-class="{'active': $location.url()=='/home'}">
+            <a href="#/home">Home</a>
+        </li>
+        <li ng-class="{'active': $location.url()=='/profile'}" ng-show="currentUser">
+            <a href="#/profile">Profile</a>
+        </li>
+        <li ng-class="{'active': $location.url()=='/admin'}" ng-show="currentUser.roles.indexOf('admin') >= 0">
+            <a href="#/admin">Admin</a>
+        </li>
+        <li ng-class="{'active': $location.url()=='/forms'}" ng-show="currentUser">
+            <a href="#/forms">Forms</a>
+        </li>
     </ul>
 </div>
