--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+    <!-- {{currentUser}} -->
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1>Profile</h1>
