--- a/public/assignment/views/admin/admin.view.html
+++ b/public/assignment/views/admin/admin.view.html
@@ -1,4 +1,4 @@
-<div class="container-fluid admin">
+<div ng-controller="AdminController" class="container-fluid admin">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1>Admin</h1>
