--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -1,8 +1,13 @@
-<div class="container-fluid">
+<div ng-controller="ProfileController" class="container-fluid">
     <!-- {{currentUser}} -->
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1>Profile</h1>
+
+            <div ng-show="message" class="alert alert-success" role="alert">{{message}}</div>
+
+            <div ng-show="error" class="alert alert-danger" role="alert">{{error}}</div>
+
             <form class="form-horizontal">
                 <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Username:</label>
