project proof of concept

--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -15,7 +15,7 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td><input ng-model="forms.title" type="text" class="form-control" placeholder="Name"></td>
+                    <td><input ng-model="form.title" type="text" class="form-control" placeholder="Name"></td>
                     <td>
                         <a ng-click="addForm(form)"><span class="glyphicon glyphicon-plus"></span></a>
                         <a ng-click="updateForm()"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
