--- a/public/project/views/header/header.view.html
+++ b/public/project/views/header/header.view.html
@@ -12,14 +12,12 @@
         <div id="navbar" class="navbar-collapse collapse">
             <div ng-show="currentUser" class="col-sm-4 col-md-offset-5 col-md-3 search">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for...">
+                    <input type="text" class="form-control" placeholder="Search...">
                     <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">Go!</button>
+                        <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
                     </span>
                 </div>
-                <!-- /input-group -->
             </div>
-            <!-- /.col-lg-6 -->
             <ul class="nav navbar-nav navbar-right">
                 <li ng-show="currentUser" ng-class="{'active': $location.url().indexOf('help') != -1}">
                     <a href="#/help">
