--- a/public/project/css/project-style.css
+++ b/public/project/css/project-style.css
@@ -66,7 +66,7 @@ input {
 .navbar-right {
     height: 60px;
 }
-.navbar-nav .navbar-right a {
+.navbar-nav .navbar-right li a {
 
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
