--- a/public/project/views/users/profile.view.html
+++ b/public/project/views/users/profile.view.html
@@ -60,7 +60,7 @@
 
                 <div class="form-group">
                     <div class="col-sm-2 pull-right">
-                        <button ng-click="update(currentUser)" type="submit" class="btn btn-default btn-lg">Update</button>
+                        <button ng-click="update(currentUser)" type="submit" class="btn btn-default btn-md">Update</button>
                     </div>
                 </div>
             </form>
