--- a/public/project/views/courses/courses.view.html
+++ b/public/project/views/courses/courses.view.html
@@ -1,6 +1,6 @@
 <div ng-controller="CoursesController" class="container-fluid">
     <div class="row">
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main courses">
             <h1>Courses</h1>
             <ul class="nav nav-tabs">
                 <li role="presentation" class="active">
@@ -30,10 +30,10 @@
                         <td><input ng-model="course.instructor" type="text" class="course-control" placeholder="Instructor"></td>
                         <td>
                             <a ng-click="addCourse(course)">
-                                <span class="glyphicon glyphicon-plus"></span>
+                                <i class="fa fa-plus-circle"></i>
                             </a>
                             <a ng-click="updateCourse()">
-                                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+                                <i class="fa fa-check-circle"></i>
                             </a>
                         </td>
                     </tr>
@@ -49,10 +49,10 @@
                         </td>
                         <td>
                             <a ng-click="deleteCourse($index)">
-                                <span class="glyphicon glyphicon-remove"></span>
+                                <i class="fa fa-trash-o"></i>
                             </a>
                             <a ng-click="selectCourse($index)">
-                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                <i class="fa fa-pencil-square-o"></i>
                             </a>
                         </td>
                     </tr>
