--- a/public/project/views/courses/fields.view.html
+++ b/public/project/views/courses/fields.view.html
@@ -1,7 +1,7 @@
 <div ng-controller="FieldsController" class="container-fluid">
     <div class="row">
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1>courses</h1>
+            <h1>Courses</h1>
             <ul class="nav nav-tabs">
                 <li role="presentation"><a href="#courses">Courses</a></li>
                 <li role="presentation" class="active"><a href="#fields">Fields</a></li>
