--- a/public/project/views/header/header.view.html
+++ b/public/project/views/header/header.view.html
@@ -7,17 +7,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/dashboard">Northeastern</a>
+            <a class="navbar-brand" href="#/login"><img src="img/northeastern-white.png"/></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <div ng-show="currentUser" class="col-sm-4 col-md-offset-5 col-md-3 search">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search...">
-                    <span class="input-group-btn">
-                        <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
-                    </span>
-                </div>
-            </div>
+
             <ul class="nav navbar-nav navbar-right">
                 <li ng-show="currentUser" ng-class="{'active': $location.url().indexOf('help') != -1}">
                     <a href="#/help">
@@ -29,11 +22,11 @@
                         <i class="fa fa-cog"></i>
                     </a>
                 </li>
-                <li ng-hide="currentUser" ng-class="{'active': $location.url().indexOf('register') != -1}">
+                <!-- <li ng-hide="currentUser" ng-class="{'active': $location.url().indexOf('register') != -1}">
                     <a href="#/register">Register
                         <i class="fa fa-user-plus"></i>
                     </a>
-                </li>
+                </li> -->
                 <li ng-hide="currentUser" ng-class="{'active': $location.url().indexOf('login') != -1}">
                     <a href="#/login">Login<i class="fa fa-sign-in"></i>
                     </a>
