--- a/public/project/views/users/login.view.html
+++ b/public/project/views/users/login.view.html
@@ -17,7 +17,11 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button ng-click="login(user)" type="submit" class="btn btn-default btn-lg">Login</button>
+                        <button ng-click="login(user)" type="submit" class="btn btn-default btn-md">Login</button>
+
+                        <a href="#" class="forgot-password">Forgot your password?</a>
+
+                        <div class="register-link">Don't have an account? <a href="#/register">Sign up</a>!</div>
                     </div>
                 </div>
             </form>
