--- a/public/project/views/users/register.view.html
+++ b/public/project/views/users/register.view.html
@@ -7,6 +7,12 @@
 
             <form class="form-horizontal">
                 <div class="form-group">
+                    <label for="" class="col-sm-2 control-label">Email:</label>
+                    <div class="col-sm-10">
+                        <input ng-model="user.email" type="email" class="form-control" id="" placeholder="Email">
+                    </div>
+                </div>
+                <div class="form-group">
                     <label for="" class="col-sm-2 control-label">Username:</label>
                     <div class="col-sm-10">
                         <input ng-model="user.username" type="text" class="form-control" id="" placeholder="Username">
@@ -25,14 +31,8 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="" class="col-sm-2 control-label">Email:</label>
-                    <div class="col-sm-10">
-                        <input ng-model="user.email" type="email" class="form-control" id="" placeholder="Email">
-                    </div>
-                </div>
-                <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default btn-lg" ng-click="register(user)">Register</button>
+                        <button type="submit" class="btn btn-default btn-md" ng-click="register(user)">Register</button>
                     </div>
                 </div>
             </form>
