--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -18,14 +18,14 @@
                     <td><input ng-model="form.title" type="text" class="form-control" placeholder="Name"></td>
                     <td>
                         <a ng-click="addForm(form)"><span class="glyphicon glyphicon-plus"></span></a>
-                        <a ng-click="updateForm()"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
+                        <a ng-click="updateForm(form)"><span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a>
                     </td>
                 </tr>
                 <tr ng-repeat="form in forms">
                     <td><a href="#/fields">{{form.title}}</a></td>
                     <td>
-                        <a ng-click="deleteForm($index)"><span class="glyphicon glyphicon-remove"></span></a>
-                        <a ng-click="selectForm($index)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                        <a ng-click="deleteForm(form._id)"><span class="glyphicon glyphicon-remove"></span></a>
+                        <a ng-click="selectForm(form._id)"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
                     </td>
                 </tr>
                 </tbody>
